fix: message notice icon alignment issue

--- a/packages/nc-gui/ee/assets/style.scss
+++ b/packages/nc-gui/ee/assets/style.scss
@@ -692,4 +692,8 @@ a {
 
 .ant-message-notice-content {
   @apply !rounded-md;
+  
+  .ant-message-custom-content{
+    @apply flex items-center
+  }
 }
